--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Phần Mềm In Bill Bluetooth - Giải Pháp Cho Cửa Hàng Nhỏ</title>
+    <title>Phần Mềm In Bill Bluetooth</title>
     <style>
         * {
             margin: 0;
@@ -507,7 +507,7 @@
 <body>
     <header>
         <div class="container">
-            <div class="logo">📱 In Bill Bluetooth</div>
+            <div class="logo">📱Phần mềm In Bill Bằng Bluetooth</div>
             <nav>
                 <a href="#demo">Demo</a>
                 <a href="#tinhnang">Tính năng</a>
