--- a/index.html
+++ b/index.html
@@ -656,9 +656,9 @@
             <h2>Liên Hệ Mua Bản Quyền</h2>
             <div class="contact-cards">
                 <div class="contact-card">
-                    <h3>Facebook</h3>
-                    <p>Nhắn tin qua Facebook để được tư vấn nhanh</p>
-                    <a href="https://facebook.com/Hiy.Jon" target="_blank">Nhắn Facebook</a>
+                    <h3>Zalo</h3>
+                    <p>Nhắn tin qua Zalo để được tư vấn nhanh</p>
+                    <a href="https://zalo.me/0868085409" target="_blank">Nhắn Zalo</a>
                 </div>
                 <div class="contact-card">
                     <h3>Email</h3>
@@ -666,13 +666,12 @@
                     <a href="mailto:dinhtanhuy547@gmail.com">Gửi Email</a>
                 </div>
             </div>
-            <p class="contact-note">Nhắn Facebook hoặc gửi Gmail để được tư vấn & hỗ trợ cài đặt</p>
+            <p class="contact-note">Nhắn Zalo hoặc gửi Gmail để được tư vấn & hỗ trợ cài đặt</p>
         </div>
     </section>
 
     <footer>
         <div class="container">
-            <p><strong>Phần mềm in bill Bluetooth – Giải pháp gọn nhẹ cho cửa hàng nhỏ</strong></p>
             <p><a href="chinh-sach.html">Chính sách bản quyền</a> | © 2026 In Bill Bluetooth</p>
         </div>
     </footer>
