--- a/chinh-sach.html
+++ b/chinh-sach.html
@@ -391,7 +391,7 @@
             <p>Chúng tôi cung cấp hỗ trợ kỹ thuật cho khách hàng hợp lệ:</p>
             <ul>
                 <li><strong>Thời gian:</strong> 8h00 - 17h00 (Thứ 2 - Thứ 6)</li>
-                <li><strong>Kênh hỗ trợ:</strong> Facebook Messenger và Email</li>
+                <li><strong>Kênh hỗ trợ:</strong> Zalo và Email</li>
                 <li><strong>Phản hồi:</strong> Trong vòng 2 giờ làm việc</li>
                 <li><strong>Hỗ trợ khẩn cấp:</strong> 24/7 cho sự cố nghiêm trọng</li>
             </ul>
@@ -439,12 +439,12 @@
                     <div class="contact-item">
                         <h4>Facebook</h4>
                         <p>Nhắn tin trực tiếp để được tư vấn nhanh</p>
-                        <a href="https://facebook.com/Hiy.Jon" target="_blank" rel="noopener noreferrer">
-                            facebook.com/Hiy.Jon
+                        <a href="https://zalo.me/0868085409" target="_blank" rel="noopener noreferrer">
+                            zalo ADMIN
                         </a>
                     </div>
                     <div class="contact-item">
-                        <h4>Email & Zalo</h4>
+                        <h4>Email & HOT Line</h4>
                         <p>Gửi email để được hỗ trợ chi tiết</p>
                         <a href="mailto:dinhtanhuy547@gmail.com">
                             dinhtanhuy547@gmail.com
@@ -453,8 +453,8 @@
                     <div class="contact-item">
                         <h4>Hotline</h4>
                         <p>Gọi điện trực tiếp để được tư vấn</p>
-                        <a href="tel:+84912345678">
-                            📞 0912 345 678
+                        <a href="tel:+84868085409">
+                            📞 0868 085 409
                         </a>
                     </div>
                 </div>
