--- a/chinh-sach.html
+++ b/chinh-sach.html
@@ -423,19 +423,10 @@
             <ul>
                 <li>Không chịu trách nhiệm về thiệt hại do sử dụng sai mục đích</li>
                 <li>Không đảm bảo hoạt động 100% trên mọi thiết bị</li>
-                <li>Không chịu trách nhiệm về mất mát dữ liệu</li>
-                <li>Khuyến khích khách hàng sao lưu dữ liệu thường xuyên</li>
+                <li>Chịu trách nhiệm về mất mát dữ liệu</li>
             </ul>
 
-            <h2>10. Thay Đổi Chính Sách</h2>
-            <p>Chúng tôi có quyền thay đổi chính sách này khi cần thiết. Thay đổi sẽ có hiệu lực sau 15 ngày kể từ ngày công bố, được thông báo qua:</p>
-            <ul>
-                <li>Website chính thức</li>
-                <li>Email đến khách hàng</li>
-                <li>Thông báo trong phần mềm</li>
-            </ul>
-
-            <div class="contact-box">
+                        <div class="contact-box">
                 <h3>📞 Liên Hệ Với Chúng Tôi</h3>
                 <p>Nếu có bất kỳ câu hỏi nào về chính sách bản quyền, vui lòng liên hệ:</p>
                 
@@ -443,7 +434,7 @@
                     <h4>Zalo ADMIN</h4>
                     <p>Nhắn tin trực tiếp để được tư vấn nhanh</p>
                     <a href="https://zalo.me/0868085409" target="_blank" rel="noopener noreferrer">
-                        Nhắn Zalo ngay
+                        Nhắn Zalo ADMIN ngay
                     </a>
                 </div>
             </div>
@@ -464,7 +455,7 @@
                 <a href="index.html#lienhe">Liên hệ</a>
             </p>
             <p style="margin-top: 20px; font-size: 14px; opacity: 0.8;">
-                © 2024 Phần mềm In Bill Bluetooth. Mọi quyền được bảo hộ.<br>
+                © 2026 Phần mềm In Bill Bluetooth. Mọi quyền được bảo hộ.<br>
                 Thiết kế bởi Đinh Tấn Huy
             </p>
         </div>
