--- a/chinh-sach.html
+++ b/chinh-sach.html
@@ -330,7 +330,7 @@
             <p>Khi mua bản quyền phần mềm, khách hàng được cấp quyền:</p>
             <ul>
                 <li><strong>Sử dụng vĩnh viễn</strong> - không giới hạn thời gian</li>
-                <li><strong>Hỗ trợ kỹ thuật miễn phí</strong> qua Facebook và Email</li>
+                <li><strong>Hỗ trợ kỹ thuật miễn phí</strong> qua Zalo và Email</li>
                 <li><strong>Cập nhật phiên bản</strong> trong vòng 1 năm kể từ ngày mua</li>
                 <li><strong>In hóa đơn không giới hạn</strong> số lượng</li>
                 <li><strong>Tùy chỉnh menu món ăn</strong> theo nhu cầu cửa hàng</li>
@@ -395,7 +395,7 @@
             <p>Chúng tôi cung cấp hỗ trợ kỹ thuật cho khách hàng hợp lệ:</p>
             <ul>
                 <li><strong>Thời gian:</strong> 8h00 - 17h00 (Thứ 2 - Thứ 6)</li>
-                <li><strong>Kênh hỗ trợ:</strong> Facebook Messenger và Email</li>
+                <li><strong>Kênh hỗ trợ:</strong> Zalo và Email</li>
                 <li><strong>Phản hồi:</strong> Trong vòng 2 giờ làm việc</li>
                 <li><strong>Hỗ trợ khẩn cấp:</strong> 24/7 cho sự cố nghiêm trọng</li>
             </ul>
