--- a/chinh-sach.html
+++ b/chinh-sach.html
@@ -422,16 +422,14 @@
             <p>Chúng tôi:</p>
             <ul>
                 <li>Không chịu trách nhiệm về thiệt hại do sử dụng sai mục đích</li>
-                <li>Không đảm bảo hoạt động 100% trên mọi thiết bị</li>
+                <li>Đảm bảo hoạt động 100% trên mọi thiết bị</li>
                 <li>Chịu trách nhiệm về mất mát dữ liệu</li>
             </ul>
 
                         <div class="contact-box">
                 <h3>📞 Liên Hệ Với Chúng Tôi</h3>
-                <p>Nếu có bất kỳ câu hỏi nào về chính sách bản quyền, vui lòng liên hệ:</p>
                 
                 <div class="contact-item">
-                    <h4>Zalo ADMIN</h4>
                     <p>Nhắn tin trực tiếp để được tư vấn nhanh</p>
                     <a href="https://zalo.me/0868085409" target="_blank" rel="noopener noreferrer">
                         Nhắn Zalo ADMIN ngay
