--- a/index.html
+++ b/index.html
@@ -657,7 +657,7 @@
             <div class="contact-cards">
                 <div class="contact-card">
                     <h3>Zalo</h3>
-                    <p>Nhắn tin qua Facebook để được tư vấn nhanh</p>
+                    <p>Nhắn tin qua Zalo để được tư vấn nhanh</p>
                     <a href="https://zalo.me/0868085409" target="_blank">Nhắn Zalo</a>
                 </div>
                 <div class="contact-card">
