--- a/index.html
+++ b/index.html
@@ -910,7 +910,6 @@
     <section class="target-section fade-in">
         <div class="container">
             <h2 class="section-title">Phần Mềm Dành Cho</h2>
-            <p class="section-subtitle">Giải pháp hoàn hảo cho các mô hình kinh doanh nhỏ và vừa</p>
             <div class="target-list">
                 <ul>
                     <li>Quán ăn, nhà hàng nhỏ</li>
@@ -970,7 +969,7 @@
             <div class="guarantee-content">
                 <div class="guarantee-item">
                     <div class="guarantee-icon">✅</div>
-                    <div class="guarantee-text">Hoàn tiền trong 30 ngày nếu không hài lòng</div>
+                    <div class="guarantee-text">Hoàn tiền trong 14 ngày nếu bị lỗi phần mềm</div>
                 </div>
                 <div class="guarantee-item">
                     <div class="guarantee-icon">🛡️</div>
@@ -1030,7 +1029,7 @@
                         <span>📱</span>
                         <span>In Bill Bluetooth Pro</span>
                     </div>
-                    <p>Giải pháp in bill thông minh cho cửa hàng nhỏ. Đơn giản, nhanh chóng, hiệu quả.</p>
+                    
                 </div>
                 <div class="footer-links">
                     <h4>Liên Kết Nhanh</h4>
