--- a/index.html
+++ b/index.html
@@ -948,11 +948,11 @@
             <div class="guarantee-content">
                 <div class="guarantee-item">
                     <div class="guarantee-icon">✅</div>
-                    <div class="guarantee-text">Hoàn tiền trong 30 ngày nếu không hài lòng</div>
+                    <div class="guarantee-text">Hoàn tiền trong 14 ngày nếu phần mềm lỗi</div>
                 </div>
                 <div class="guarantee-item">
                     <div class="guarantee-icon">🛡️</div>
-                    <div class="guarantee-text">Bảo hành phần mềm trọn đời</div>
+                    <div class="guarantee-text">Bảo hành phần mềm 10 năm</div>
                 </div>
                 <div class="guarantee-item">
                     <div class="guarantee-icon">🎓</div>
@@ -995,7 +995,7 @@
                 </div>
             </div>
             <p class="contact-note" style="text-align: center; margin-top: 50px; font-size: 18px; color: #1a3a52; background: #f0f9ff; padding: 20px; border-radius: 10px; border-left: 5px solid #ff6b35;">
-                <strong>📞 Hotline hỗ trợ nhanh:</strong> 0868 085 409 (8:00 - 22:00 hàng ngày)
+                <strong>📞 Hotline hỗ trợ nhanh:</strong> 0868 085 409 (8:00 - 17:00 hàng ngày)
             </p>
         </div>
     </section>
